Partial present causes glitches on Win7 with non-Aero theme
Categories
(Core :: Graphics: WebRender, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | disabled |
| firefox77 | --- | disabled |
| firefox78 | --- | disabled |
| firefox79 | --- | verified |
People
(Reporter: yoasif, Assigned: sotaro)
References
(Regression)
Details
(Keywords: correctness, regression)
Attachments
(6 files)
Reported: https://www.reddit.com/r/firefox/comments/ghkj22/terrible_graphical_glitches_on_nightly/
Since a few days ago, I've been having a lot of tearing-like glitches on Firefox Nightly. They happen almost every time I:
Alt-Tab into Firefox (or switch to a Nightly window using the taskbar, or minimize it by clicking on a maximized browser window)
Switch between two Firefox windows
Close a file selection or other explorer dialog (less often)It does not happen when switch to a different tab, in fact that is - along with moving the mouse in the general area where the bug is happening - a way to make the "ghost" image disappear. Usually it's the bottom half of the screen that doesn't "refresh".
Disabling WR resolves the issue.
| Reporter | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Looks like some screen tearing happening for some folks on Win7
Updated•5 years ago
|
Comment 3•5 years ago
|
||
Hey Sotaro - can you reproduce this?
Updated•5 years ago
|
Comment 5•5 years ago
|
||
Hi, I was able to reproduce this issue In our latest Nightly build, Beta as well as Release after setting the gfx.webrender.all = true, ill attach a few screenshots and a screencapture to this issue.
I will also attach the about:support from my computer, it happens on my Nvidia GT 730 as well.
Comment 7•5 years ago
|
||
Comment 8•5 years ago
|
||
Comment 9•5 years ago
|
||
Comment 10•5 years ago
|
||
attached the aboutSupport file with Webrender enabled.
Comment 11•5 years ago
•
|
||
I can reproduce this window expose problem only when Win7 Aero theme is disabled.
This problem looks a bit like what I saw on KDE a year ago: bug 1518796. (bug 1502519 looks different, but is still reproducible for me on KDE.)
i3 also suffers from a window expose bug: bug 1572625
Comment 13•5 years ago
|
||
As a band aid we can probably disable WebRender when we don't have DWM: gfxWindowsPlatform::GetPlatform()->DwmCompositionEnabled()
Andrew, want to make a patch for that?
Comment 14•5 years ago
|
||
(In reply to Jeff Muizelaar [:jrmuizel] from comment #13)
As a band aid we can probably disable WebRender when we don't have DWM: gfxWindowsPlatform::GetPlatform()->DwmCompositionEnabled()
Andrew, want to make a patch for that?
Sure. I'll fork the bug so we can track the original issue.
Updated•5 years ago
|
| Assignee | ||
Comment 15•5 years ago
•
|
||
(In reply to Jessie [:jbonisteel] pls NI from comment #6)
Sotaro, can you see if you can repro?
By disabling DWM manually, I confirmed that the problem happened. It seems that :aosmond is already working for the bug.
Comment 16•5 years ago
|
||
Confirmed: comment 7 and bug 1638431 are caused by partial present.
https://hg.mozilla.org/integration/autoland/shortlog/5674dddc94f8
last good: mozregression --repo autoland --launch 8f47bf276c0e499246652701cd6b9b23e090a0d8 --pref gfx.webrender.all:true -a https://reddit.com -a https://mozilla.org
first bad: mozregression --repo autoland --launch 5674dddc94f8a8e9c034c80b3650417bf39ba697 --pref gfx.webrender.all:true -a https://reddit.com -a https://mozilla.org
First bad is fine if you set gfx.webrender.max-partial-present-rects:0.
bug 1638835: Maybe Win8 has the same problem. I still wanted to install it.
Comment 18•5 years ago
|
||
Intel HD Graphics 630 (0x8086 0x5912 21.20.16.4508, 2016-08-27, 2560x1440)
Autoscrolling this page with Direct3D 11 (bug 1638469) up and down stutters and there is checkerboarding at the top when scrolling up.
WebRender ("first bad" with partial present disabled) scrolls smoothly.
Comment 20•5 years ago
•
|
||
Firefox on Win7 should require DWM (Aero) only for partial present (instead of blocking WebRender completely) and Firefox graphics should be reinitialized when the user changes the Windows theme: When switching from Aero to non-Aero, wrong window buttons are shown and the corner looks incorrectly cut out until you restart Firefox.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 21•5 years ago
|
||
Bug 1638469 disable WebRender during initialization. Then, it does not handle enabling/disabling DWM dynamically. Then the problem still exist on the following STR
- [1] Confirm Aero is enabled
- [2] Start Firefox with WebRender
- [3] Disable Aero by changing window theme
- [4] Switch between two Firefox windows
| Assignee | ||
Comment 22•5 years ago
|
||
gfxVars::DwmCompositionEnabled() is dynamically updated in the following.
| Assignee | ||
Comment 23•5 years ago
|
||
| Assignee | ||
Comment 24•5 years ago
|
||
Comment 25•5 years ago
|
||
Comment 26•5 years ago
|
||
| bugherder | ||
Comment 27•5 years ago
|
||
Sotaro, I meant to write this in the review comments but it looks like I didn't. Do you mind adding a comment around:
mFullRender = true;
}
describing why it is necessary?
| Assignee | ||
Comment 28•5 years ago
|
||
(In reply to Jeff Muizelaar [:jrmuizel] from comment #27)
Sotaro, I meant to write this in the review comments but it looks like I didn't. Do you mind adding a comment around:
mFullRender = true; }describing why it is necessary?
Bug 1642834 is for adding a comment. But Bug 1642839 seems like a better fix.
Updated•5 years ago
|
Comment 29•5 years ago
|
||
This issue is verified as fixed in Beta 79.0b2 on Windows 7.
Description
•